--- a/ex-2.html
+++ b/ex-2.html
@@ -1,88 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <!--Titulo-->
     <title>Exercício 2</title>
 </head>
- 
+
 <body>
- 
-    <h1>Cadastro de Usuário</h1>
-    <!-- Imagem -->
-    <img src="./images.jfif" alt="Gatos" width="300px" height="200px" />
-    <h2> Usuario cadastrado</h2>
- 
-    <table border="1" width="100%">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Email</th>
-                <th>Idade</th>
-                <th>Telefone</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Debs</td>
-                <td>Debora.linda@gmail.com</td>
-                <td>16</td>
-                <td>11940028922</td>
-            </tr>
-            <tr>
-                <td>Izzy
-                <td>izzyperfeitaumxuxu@gmail.com</td>
-                <td>17</td>
-                <td>119634723642</td>
-                </td>
-            </tr>
-        </tbody>
-    </table>
- 
-    <!-- Formulario -->
-    <h2>Preencha seus dados</h2>
-    <form>
-        <fieldset>
-            <legend>Dados Pessoais</legend>
-            <label for="nome">Nome</label><br>
-            <input type="text" placeholder="digite seu nome">
-            <br><br>
-            <label for="">Email</label><br>
-            <input type="Email" placeholder="Digite seu email">
-            <br><br>
-            <label for="">data de nascimento</label> <br>
-            <input type="Date">
-            <fieldset>
-                <legend>Sexo</legend>
-                <label for="">M</label>
-                <input type="radio" name="Sexo" id="">
-                <label for="">F</label>
-                <input type="radio" name="Sexo" id="">
-            </fieldset>
-            <select>
-                <option value="">Celular</option>
-                <option value="">Notebook</option>
-                <option value="">Computador</option>
-            </select>
-            <br>
-            <br>
-            <br>
-            <label for="teste">Futebol</label>
-            <input id="teste" type="checkbox">
-            <label for="teste1">Natação</label>
-            <input id="teste1" type="checkbox">
-            <label for="teste2">Surf</label>
-            <input id="teste2" type="checkbox">
-            <br><br>
-            <button>Enviar</button>
- 
-        </fieldset>
- 
-    </form>
- 
+
+    <h1>Débora Vítoria da Silva Rocha</h1>
+    <p>Olá! Prazer em te conhecer! <br> Meu nome é Débora (mas pode me chamar de Debs). Estou estudando em duas Etec's
+        fazendo cursos técnicos na área de RH e DS; também adoro ler.</p>
+
+
+    <h2>Coisas que eu gosto de fazer: </h2>
+    <ul>
+        <li>Pintar as unhas</li>
+        <li>Gatos</li>
+        <li>Livros</li>
+    </ul>
+
+    <h2>Minha Lista de Compras dos Sonhos</h2>
+    <ol>
+        <li>Viagem para a França</li>
+        <li>Notebook gamer</li>
+        <li>Patins profissional</li>
+        <li>Ir em um show</li>
+        <li>Um furão</li>
+    </ol>
+
+    <h2>Minhas Séries Favoritas</h2>
+    <p>Adoro maratonar séries, principalmente quando admiro o elenco que o produziu.</p>
+    <ul>
+        <li>Anne With an E</li>
+        <li>Stranger Things</li>
+        <li>Brooklyn Nine-Nine</li>
+    </ul>
+    <hr>
+
+    <h1>Debs's Blog</h1>
+    <br>
+    <h2>Melhores Marcas de Esmaltes</h2>
+    <p>A seguir, você verá as marcas mais famosas e bem faladas de esmaltes para arrasar na próxima esmaltação!</p>
+    <ul>
+        <li>Impala</li>
+        <li>Risqué</li>
+        <li>Vult</li>
+    </ul><br>
+
+    <h2>Melhores Marcas de Maquiagem</h2>
+    <p>Aqui você vai encontrar produtos de qualidade com um valor que cabem no seu bolso!</p>
+    <ul>
+        <li>RubyRose</li>
+        <li>MaryKay</li>
+        <li>Natura</li>
+    </ul><br>
+
+<h2>Raças de Gatos</h2>
+<p>Você está com dúvida de qual gato adotar/comprar? Veja a seguir raças populares de felinos na qual você vai se apaixonar! </p>
+<ul>
+    <li>Maine Coon</li>
+    <li>Siamês</li>
+    <li>Persa</li>
+</ul>
+
 </body>
- 
+
 </html>
- 
